[gd_scene load_steps=4 format=2]

[ext_resource path="res://Components/PlaySound2D.tscn" type="PackedScene" id=1]
[ext_resource path="res://Weapons/Player/Proj_Boomerang.tscn" type="PackedScene" id=2]
[ext_resource path="res://Weapons/Weap_General.gd" type="Script" id=3]

[node name="Weap_Boomerang" type="Node2D"]
script = ExtResource( 3 )
display_name = "Boomerang"
projectile = ExtResource( 2 )
time_between_shots = 0.7
auto_fire = true
knockback_amount = 300
block_mov_duration = 0.0
block_rot_duration = 0.0

[node name="ShotTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ShotSound" parent="." instance=ExtResource( 1 )]
pitch_randomisation = 0.41

[connection signal="timeout" from="ShotTimer" to="." method="_on_ShotTimer_timeout"]
