[gd_scene load_steps=5 format=2]

[ext_resource path="res://Weapons/Player/Proj_Straight_Slow.tscn" type="PackedScene" id=1]
[ext_resource path="res://Weapons/Weap_General.gd" type="Script" id=2]
[ext_resource path="res://Components/PlaySound2D.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Audio/Shotgun.wav" type="AudioStream" id=4]

[node name="Weap_Shotgun" type="Node2D"]
script = ExtResource( 2 )
_shot_type = 2
_play_sound_type = 2
display_name = "Shotgun"
projectile = ExtResource( 1 )
time_between_shots = 0.0
num_shots_per_burst = 7
time_between_bursts = 0.05
knockback_amount = 1200
block_mov_duration = 0.0
block_rot_duration = 0.05
accuracy = 25.0

[node name="ShotTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="BurstTimer" type="Timer" parent="."]

[node name="MultiBurstTimer" type="Timer" parent="."]

[node name="ShotSound" parent="." instance=ExtResource( 3 )]
stream = ExtResource( 4 )

[connection signal="timeout" from="ShotTimer" to="." method="_on_ShotTimer_timeout"]
[connection signal="timeout" from="BurstTimer" to="." method="_on_BurstTimer_timeout"]
[connection signal="timeout" from="MultiBurstTimer" to="." method="_on_MultiBurstTimer_timeout"]
